# mini-json

./: .gitignore  CMakeLists.txt  LICENSE  README.md  library.h
.github/workflows/: cmake.yml  discord.yml
include/: JsonToken.h  library.h
source/: JsonToken.cpp  library.cpp  test.cpp
test/: CMakeLists.txt  JsonTokenTests.cpp  TestingMain.cpp  test.cpp
